As usual, upgrading to the latest version of spring is a pain in the ass